testing databricks cloned rep

--- a/setup.ipynb
+++ b/setup.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Query Strava data from ADLS and load in LLM"
+    "#Query Strava data from ADLS and load in LLM\n",
+    "#ensuring this works"
    ]
   }
  ],
